--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Toronto, Canada"
-  employer         : 
+  employer         : # ""
   uri              : # URL
   email            : "michael@mccreesh.ca" 
 
