--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ repository               : "McCreesh/McCreesh.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "photo-MM.jpg"
   name             : "Michael McCreesh"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : # Short bio
   location         : "Toronto, Canada"
   employer         : # ""
   uri              : # URL
